--- a/discovery-frontend/src/assets/css/polaris.v2.page.css
+++ b/discovery-frontend/src/assets/css/polaris.v2.page.css
@@ -1804,10 +1804,13 @@ ul.ddp-list-text li a .ddp-data-info span {display:block; color:#4b515b; font-si
 .ddp-wrap-editboard .ddp-wrap-datasource .ddp-wrap-list-source ul.ddp-list-source {position:relative;}
 .ddp-wrap-editboard .ddp-wrap-datasource .ddp-label-datasorce {position:relative; padding:15px 20px; color:#4b515b; font-size:16px; border-top:1px solid #d0d1d8; background-color:#e7e7ea; cursor:pointer;}
 .ddp-wrap-editboard .ddp-wrap-datasource.ddp-selected .ddp-label-datasorce {color:#e7e7ea; background-color:#626872;}
-.ddp-wrap-editboard .ddp-wrap-datasource .ddp-label-datasorce:before {display:inline-block; position:relative; top:-2px;width:21px; height:22px; margin-right:10px; background:url(../images/icon_database.png) no-repeat; background-position:-22px -46px; content:''; vertical-align:middle;}
+.ddp-wrap-editboard .ddp-wrap-datasource .ddp-label-datasorce:before {display:inline-block; position:relative; top:0;width:21px; height:22px; margin-right:10px; background:url(../images/icon_database.png) no-repeat; background-position:-22px -46px; content:''; vertical-align:middle;}
 .ddp-wrap-editboard .ddp-wrap-datasource.ddp-selected .ddp-label-datasorce:before {background-position-x:0;}
 .ddp-wrap-editboard .ddp-wrap-datasource .ddp-label-datasorce:after {display:inline-block; position:absolute; top:50%; right:21px; margin-top:-3px; width:9px; height:5px;  background:url(../images/icon_dropdown.png) no-repeat; background-position:0px -6px; content:'';}
 .ddp-wrap-editboard .ddp-wrap-datasource.ddp-selected .ddp-label-datasorce:after {background-position:-30px 0px;}
+.ddp-wrap-editboard .ddp-wrap-datasource.ddp-selected .ddp-ui-drop-contents {position:absolute; top:54px; left:0; right:0; bottom:0; overflow:auto;}
+.ddp-wrap-editboard .ddp-wrap-datasource.ddp-selected .ddp-ui-drop-contents::-webkit-scrollbar-track {background:#3f4349 ;}
+.ddp-wrap-editboard .ddp-wrap-datasource.ddp-selected .ddp-ui-drop-contents::-webkit-scrollbar-thumb {border:4px solid #3f4349 ; background-color:#6d7179}
 
 .ddp-ui-contents-source {position:absolute; top:42px; left:0; right:0; bottom:0; }
 .ddp-ui-contents-source .ddp-ui-top-option {position:relative; padding:0 39px 0 20px;}
@@ -5258,7 +5261,7 @@ table.ddp-table-detail tbody tr td .ddp-data-detail .ddp-link a.ddp-link-url2 {d
 table.ddp-table-detail tbody tr td .ddp-data-detail span.ddp-txt-detail {display:inline-block; position:relative; }
 table.ddp-table-detail tbody tr td .ddp-ui-edit-option .ddp-data-detail span.ddp-txt-detail a.ddp-link-detail {top:-1px;}
 table.ddp-table-detail tbody tr td .ddp-wrap-edit3 .ddp-data-detail span.ddp-txt-detail a.ddp-link-detail {top:4px;}
-table.ddp-table-detail tbody tr td .ddp-data-detail span.ddp-txt-detail a.ddp-link-detail {display:none; position:absolute; top:-1px; right:1px; color:#90969f; font-size:12px;}
+table.ddp-table-detail tbody tr td .ddp-data-detail span.ddp-txt-detail a.ddp-link-detail {display:none; position:absolute; top:-1px; right:3px; color:#90969f; font-size:12px;}
 table.ddp-table-detail tbody tr td .ddp-data-detail span.ddp-txt-detail.ddp-detail {max-width:710px; padding-right:45px;text-overflow:ellipsis; overflow:hidden; white-space:nowrap; word-wrap:normal; box-sizing:border-box; }
 table.ddp-table-detail tbody tr td .ddp-data-detail span.ddp-txt-detail.ddp-detail a.ddp-link-detail {display:block;}
 table.ddp-table-detail tbody tr td .ddp-data-detail.ddp-selected span.ddp-txt-detail {white-space:normal;}
@@ -8025,11 +8028,12 @@ em.ddp-icon-mt-data {width:13px; height:14px; background-position:left -59px;}
 /**********************************************************************************
         모니터링 jobstatistics detail
 **********************************************************************************/
-table.ddp-table-type3 tbody tr td.ddp-logdetail {padding-right:23px;}
-.ddp-logdetail .ddp-data-logdet {display:inline-block; white-space:nowrap;}
+.ddp-logdetail {text-align:left;}
+.ddp-logdetail .ddp-data-logdet {display:block; white-space:nowrap; text-overflow:ellipsis; overflow:hidden;}
+.ddp-logdetail .ddp-data-logdet span {display:inline-block;}
 .ddp-logdetail .ddp-data-logdet.ddp-long {display:block; text-overflow:ellipsis; overflow:hidden; word-wrap:normal;}
-.ddp-logdetail .ddp-wrap-logdetail {display:none;}
-.ddp-logdetail .ddp-wrap-logdetail .ddp-btn-detail {display:inline-block; position:absolute; top:50%; right:0; margin-top:-10px; width:19px; height:19px; }
+.ddp-logdetail .ddp-wrap-logdetail {float:right; margin-top:-3px; display:none;}
+.ddp-logdetail .ddp-wrap-logdetail .ddp-btn-detail {position:relative; display:inline-block; margin-left:5px; width:19px; height:19px; }
 .ddp-logdetail .ddp-wrap-logdetail .ddp-btn-detail:hover {background-color:#e7e7ea;}
 .ddp-logdetail .ddp-wrap-logdetail.ddp-selected .ddp-btn-detail {background-color:#e7e7ea;}
 .ddp-logdetail .ddp-wrap-logdetail .ddp-btn-detail:before {display:inline-block; position:absolute; top:50%; left:50%; margin:-6px 0 0 -6px; width:11px; height:11px; background:url(../images/icon_detail.png) no-repeat; content:''; opacity:0.6;}
@@ -8303,7 +8307,7 @@ table.ddp-table-detail tr td .ddp-ui-buttons .ddp-btn-add {display:inline-block;
 table.ddp-table-detail tr td .ddp-ui-buttons .ddp-btn-add:hover {border:1px solid #b7b9c1;color:#4b515b;}
 table.ddp-table-detail tr td .ddp-ui-buttons .ddp-btn-add em.ddp-icon-plus {display:inline-block; width:13px; height:13px; margin-right:5px; background:url(../images/icon_add.png) no-repeat; background-position:-84px -22px; vertical-align:middle;}
 table.ddp-table-detail tr td .ddp-ui-tags {margin-top:-5px;}
-table.ddp-table-detail tr td .ddp-tags {display:inline-block; position:relative; padding:5px 15px; background-color:#f2f1f7; border-radius:4px; color:#666fad; font-size:13px; cursor:pointer;}
+table.ddp-table-detail tr td .ddp-tags {display:inline-block; position:relative; padding:5px 15px; background-color:#f2f1f7; border-radius:4px; color:#666fad; font-size:13px; cursor:pointer; vertical-align:top}
 table.ddp-table-detail tr td .ddp-tags {margin:3px 6px 3px 0;}
 
 table.ddp-table-detail tr td .ddp-tags a.ddp-btn-delete  {display:none; position:absolute; top:-4px; right:-4px; content:''; width:14px; height:14px; background:url(../images/btn_sclose.png) no-repeat; background-position:0 -131px;}
